# kasal

./: .gitignore  .marketplace-version  CLAUDE.md  CONTRIBUTING.md  README.md  README_PBI_TOOL.md  build.py  docker-compose.dev.yml  docker-dev.sh  entrypoint.py  env.docker.example  requirements.txt  test_powerbi_connection_interactive.ipynb
src/backend/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.dev  TODO.md  coverage.json  pyproject.toml  requirements.txt  run.sh
src/backend/migrations/versions/: 000000010836_add_group_id_to_flow_executions.py  1041071e3641_drop_email_domain_column.py  154b6927acd9_add_mlflow_enabled_to_databricks_config_.py  1b22cb80b41f_add_cascade_delete_to_hitl_approvals.py  20250924_create_group_tools.py  20250925_add_evaluation_enabled_to_databricks_config.py  20250925_add_evaluation_judge_model_to_databricks_config.py  20251006_add_powerbi_config.py  20251203_add_checkpoint_data_to_execution_history.py  20251207_add_flow_support_to_schedule.py  20260112_add_hitl_tables.py  20260209_add_powerbi_semantic_model_cache.py  20260424_unify_memory_backend.py  20260511_add_lakebase_enum_value.py  20260604_doc_embeddings_scoping.py  20260609_add_ai_gateway_to_databricks_config.py  20260702_execution_group_created_idx.py  20260709_hot_polling_indexes.py  20260720_add_powerbi_extraction.py  337188149f25_add_powerbi_context_config_tables.py  37d59d9ad39b_merge_migration_heads.py  3c0aebc2977a_merge_dspy_and_other_heads.py  3e3762648db4_add_inject_date_and_date_format_to_.py  3e393f55f1eb_remove_secret_scope_column_from_.py  4568c86db33a_merge_migration_heads.py  48ad0d8dcc5f_merge_callback_config_and_temperature_.py  51c143594378_add_lakebase_memory_backend.py  52262b55c54d_add_temperature_field_to_agents.py  538129a124e7_add_auth_method_to_powerbi_config.py  665ffadb181e_remove_apps_enabled_column.py  6d23ffae21aa_drop_complex_rbac_tables.py  6efefa1a1df7_add_user_level_permission_fields.py  7a02c9c7ac15_merge_heads.py  7b636e814fa7_merge_heads_for_flow_id.py  8036d95e0e65_merge_knowledge_volume_heads.py  867824642b40_merge_mlflow_heads.py  8cae7b637c8b_make_hashed_password_nullable_for_oauth_.py  8f708c7a24de_merge_migration_branches.py  90f4428dfe2f_add_run_name_to_flow_executions.py  92fd57c71d02_add_mlflow_evaluation_run_id_field.py  (+27 more)
src/backend/scripts/: create_powerbi_extraction_table.py  dax_regression_harness.py
src/backend/scripts/migrations/: migrate_mcp_group_id.py
src/backend/src/: main.py
src/backend/src/api/: CLAUDE.md  __init__.py  agent_generation_router.py  agentbricks_router.py  agents_router.py  analytics_export_router.py  api_keys_router.py  auth_router.py  chat_history_router.py  connections_router.py  converter_router.py  crew_generation_router.py  crews_export_router.py  crews_router.py  database_management_router.py  databricks_knowledge_router.py  databricks_role_router.py  databricks_router.py  databricks_secrets_router.py  dispatcher_router.py  documentation_embeddings_router.py  dspy_router.py  engine_config_router.py  execution_history_router.py  execution_logs_router.py  execution_trace_router.py  executions_router.py  flow_execution_router.py  flows_router.py  genie_router.py  group_router.py  group_tools_router.py  healthcheck_router.py  hitl_router.py  identity_providers_router.py  kpi_conversion_router.py  logs_router.py  mcp_router.py  memory_backend_router.py  mlflow_router.py  (+19 more)
src/backend/src/config/: logging.py  settings.py
src/backend/src/converters/: COMPLETE_INTEGRATION_SUMMARY.md  FRONTEND_INTEGRATION_GUIDE.md  INBOUND_INTEGRATION_GUIDE.md  MIGRATION.md  README.md  __init__.py  pipeline.py
src/backend/src/core/: base_repository.py  cache.py  crewai_patches.py  dependencies.py  exceptions.py  llm_manager.py  logger.py  permissions.py  rate_limit.py  sse_manager.py  unit_of_work.py
src/backend/src/db/: all_models.py  database_router.py  lakebase_session.py  lakebase_state.py  session.py
src/backend/src/dependencies/: admin_auth.py
src/backend/src/models/: __init__.py  agent.py  api_key.py  chat_session.py  conversion.py  crew.py  crew_feedback.py  database_config.py  databricks_config.py  documentation_embedding.py  dspy_config.py  enums.py  execution_history.py  execution_status.py  execution_trace.py  flow.py  flow_execution.py  flow_state.py  group.py  group_tool.py  hitl_approval.py  mcp_server.py  memory_backend.py  model_config.py  powerbi_config.py  powerbi_context_config.py  powerbi_extraction.py  powerbi_semantic_model_cache.py  schedule.py  task.py  template.py  ui_config.py  user.py
src/backend/src/repositories/: CLAUDE.md  __init__.py  agent_repository.py  agent_trace_repository.py  agentbricks_repository.py  api_key_repository.py  billing_repository.py  chat_history_repository.py  chat_session_repository.py  conversion_repository.py  crew_feedback_repository.py  crew_generator_repository.py  crew_repository.py  dashboard_repository.py  database_backup_repository.py  database_config_repository.py  databricks_auth_helper.py  databricks_config_repository.py  databricks_vector_endpoint_repository.py  databricks_vector_index_repository.py  databricks_volume_repository.py  documentation_embedding_repository.py  dspy_config_repository.py  engine_config_repository.py  execution_history_repository.py  execution_logs_repository.py  execution_repository.py  execution_trace_repository.py  flow_execution_repository.py  flow_repository.py  flow_state_repository.py  genie_repository.py  group_repository.py  group_tool_repository.py  hitl_repository.py  log_repository.py  mcp_repository.py  memory_backend_repository.py  mlflow_repository.py  model_config_repository.py  (+11 more)
src/backend/src/schemas/: agent.py  agentbricks.py  analytics_export.py  chat_history.py  conversion.py  crew.py  crew_export.py  crew_feedback.py  database_management.py  databricks_config.py  databricks_index_schemas.py  dispatcher.py  documentation_embedding.py  dspy_schemas.py  engine_config.py  execution.py  execution_history.py  execution_trace.py  flow.py  flow_execution.py  (+22 more)
src/backend/tests/: README.md  conftest.py  pytest.ini
(+2970 files in other folders)
